# servente

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.cargo/: config.toml
.github/workflows/: rust.yml  rustdoc.yml
collaudatrice/: Cargo.toml  README.md
collaudatrice/src/: analyze.rs  http1.rs  io.rs  main.rs
docs/: Benchmark.md  Sandboxing.md  Security.md
resources/: welcome.html  welcome.nl.html
servente/: Cargo.toml  README.md
servente-cgi/: Cargo.toml
servente-cgi/src/: lib.rs
servente-common/: Cargo.toml
servente-feed/: Cargo.toml
servente-feed/src/: lib.rs
servente-generator/: Cargo.toml
servente-http/: Cargo.toml
servente-http-handling/: Cargo.toml
servente-http-handling/src/: config.rs  handler.rs  lib.rs
servente-http/src/: error.rs  header_name.rs  range.rs  request_target.rs
servente-http/src/header_value/: mod.rs  sec_fetch_dest.rs
servente-http1/: Cargo.toml
servente-http1/src/: read.rs
servente-http2/: Cargo.toml
servente-http2/src/: hpack.rs  lib.rs
servente-http3/: Cargo.toml
servente-http3/src/: static_table.rs
servente-infra/: Cargo.toml  README.md
servente-infra/src/: identity.rs  lib.rs
servente-resources/: Cargo.toml  README.md
servente-resources/src/: content_coding.rs  exclude.rs  fs.rs  lib.rs  static_resources.rs
servente-self-signed-cert/: Cargo.toml
servente-self-signed-cert/src/: lib.rs
servente-web-sockets/: Cargo.toml
servente-web-sockets/src/: http1.rs  lib.rs
servente/src/: abnf.rs  cert.rs  example_handlers.rs  handler.rs  main.rs
servente/src/http/: error.rs  hints.rs  message.rs  mod.rs  syntax.rs  v1.rs  v2.rs  v3.rs
servente/src/http/v2/: bits.rs  hpack.rs
servente/src/http/v3/: static_table.rs
servente/src/resources/: cache.rs  compression.rs  mod.rs  static_res.rs
servente/tests/: basic-regression.rs
servente_common/: Cargo.toml  README.md
servente_common/src/: lib.rs
servente_generator/: Cargo.toml  README.md
servente_generator/src/: common_mark.rs  lib.rs
servente_http/: Cargo.toml  README.md
servente_http/src/: abnf.rs  error.rs  header_map.rs  header_name.rs  header_value.rs  lib.rs  method.rs  request.rs  request_target.rs  response.rs  status.rs  syntax.rs  version.rs
servente_http/src/header_value/: languages.rs  lists.rs  mod.rs
servente_http1/: Cargo.toml
servente_http1/src/: lib.rs  read.rs
servente_http1/tests/: integration_tests.rs
servente_http2/: Cargo.toml  README.md
servente_http2/src/: hpack.rs  lib.rs
servente_http3/: Cargo.toml
servente_http3/src/: constants.rs  error.rs  io_extensions.rs  lib.rs  qpack_stream.rs  settings.rs  static_table.rs
servente_http_handling/: Cargo.toml
servente_http_handling/src/: config.rs  lib.rs  middleware.rs  responses.rs
servente_resources/: Cargo.toml
servente_resources/src/: cache.rs  compression.rs  content_coding.rs  exclude.rs  lib.rs  magic.rs  media_type.rs
src/: cert.rs  example_handlers.rs  handler.rs  http1.rs  main.rs
src/http/: error.rs  hints.rs  message.rs  mod.rs  v1.rs  v2.rs
src/http/v2/: hpack.rs
src/platform/: mod.rs  unix.rs
src/resources/: cache.rs  compression.rs  mod.rs  static_res.rs
tools/: setup-hooks.sh
tools/git-hooks/: pre-push
