cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "collaudatrice",
    "servente",
    "servente_common",
    "servente_generator",
    "servente_http",
    "servente_http_handling",
    "servente_http2",
    "servente_http3",
    "servente_resources",
    "servente-cgi",
    "servente-self-signed-cert",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/usadson/servente/"
version = "0.2.1"
authors = ["Tristan Gerritsen"]
license = "Apache-2.0"
license-file = "COPYING"

[profile.release]
opt-level = 3
debug = true
codegen-units = 1
lto = true

[profile.release-aggressive]
inherits = "release"
strip = "none"
codegen-units = 1
lto = true
debug = true

[workspace.dependencies]
tokio = { version = "*", features = ["full"] }

rustls = { version = "*", features = ["quic", "secret_extraction"] }
tokio-rustls = "*"

boring = { version = "*" }
tokio-boring = { version = "*" }
