[package]
name = "collaudatrice"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "*", features = ["backtrace"]}
clap = { version = "*", features = ["derive"] }
crossbeam-deque = "*"
crossbeam-queue = "*"
futures = "*"
owo-colors = "*"
rustls = { version = "*", features = ["dangerous_configuration"] }
rustls-native-certs = "*"
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"
