[package]
name = "servente-cgi"
edition.workspace = true
repository.workspace = true
version.workspace = true

[features]

[dependencies]
async-trait = "*"
anyhow = "*"

servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }
servente_resources = { version = "*", path = "../servente_resources" }
