[package]
name = "servente-cgi"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
license-file = "../COPYING"

[features]

[dependencies]
async-trait = "*"
anyhow = "*"

tokio = { workspace = true }

servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }
servente_http1 = { version = "*", path = "../servente_http1" }
servente_resources = { version = "*", path = "../servente_resources" }
