[package]
name = "servente-cgi"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[features]

[dependencies]
async-trait = "*"
anyhow = "*"

tokio = { workspace = true }

servente-http = { version = "*", path = "../servente-http" }
servente-http-handling = { version = "*", path = "../servente-http-handling" }
servente-http1 = { version = "*", path = "../servente-http1" }
servente-resources = { version = "*", path = "../servente-resources" }
