[package]
name = "servente-http-handling"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "*"
async-trait = "*"
dyn-clone = "*"
httpdate = "*"
itertools = "*"
rustls = { workspace = true, optional = true }
tokio = { version = "*", features = ["full"] }
urlencoding = "*"

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }

servente-http = { version = "*", path = "../servente-http" }
servente-resources = { version = "*", path = "../servente-resources" }
servente-self-signed-cert = { version = "*", path = "../servente-self-signed-cert", optional = true }

[features]
default = ["convert-markdown"]
debugging = []
convert-markdown = [
    "servente-resources/convert-markdown"
]
http2 = []
http3 = []
rustls = [
    "dep:rustls",
    "dep:servente-self-signed-cert",
    "servente-self-signed-cert?/tls-rustls",
]

tls-boring = [
    "dep:boring",
    "dep:tokio-boring",
    "dep:servente-self-signed-cert",
    "servente-self-signed-cert?/tls-boring",
]
