[package]
name = "servente-http"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "*"
httpdate = "*"
phf = { version = "0.11.1", features = ["macros", "unicase"] }
strum_macros = "*"
tokio = { version = "*", features = ["full"] }
unicase = "*"

servente-resources = { version = "*", path = "../servente-resources" }

[dev-dependencies]
float-cmp = "*"
rstest = "*"

[features]
debugging = []
