[package]
name = "servente-http1"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "*"
itertools = "*"
ktls = { version = "*", optional = true }
lazy_static = "*"
rustls = { workspace = true, optional = true }
tokio = { version = "*", features = ["full"] }
tokio-rustls = { workspace = true, optional = true }
tokio-uring = { version = "*", optional = true }

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }


servente-http = { version = "*", path = "../servente-http" }
servente-http-handling = { version = "*", path = "../servente-http-handling" }
servente-http2 = { version = "*", path = "../servente-http2", optional = true }
servente-resources = { version = "*", path = "../servente-resources" }

[dev-dependencies]
rstest = "*"
tempfile = "*"

[features]
default = ["convert-markdown"]
debugging = []
convert-markdown = ["servente-http-handling/convert-markdown"]
http2 = ["dep:servente-http2"]
io_uring = [
    "dep:tokio-uring",
]
ktls = ["dep:ktls"]
rustls = [
    "dep:rustls",
    "dep:tokio-rustls",
]

tls-boring = [
    "dep:boring",
    "dep:tokio-boring",
    "servente-http-handling/tls-boring",
    "servente-http2?/tls-boring",
]

[[bin]]
name = "servente-http1-custom-bencher-handle-exchange"
