[package]
name = "servente-http3"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "*"
itertools = "*"
lazy_static = "*"
quinn = { version = "*", features = ["rustls"] }
rustls = { workspace = true }
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"

servente-common = { version = "*", path = "../servente-common" }
servente-http = { version = "*", path = "../servente-http" }
servente-http-handling = { version = "*", path = "../servente-http-handling" }

[dev-dependencies]
rstest = "*"

[features]
debugging = []
