[package]
name = "servente-http3"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "*"
lazy_static = "*"
quinn = { version = "*", features = ["rustls"] }
rustls = { workspace = true }
tokio = { version = "*", features = ["full"] }

servente-http = { version = "*", path = "../servente-http" }

[dev-dependencies]
rstest = "*"

[features]
debugging = []
