[package]
name = "servente-resources"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
brotli = { version = "*", default-features = false, features = ["std"] }
flate2 = "*"
lazy_static = "*"
notify = { version = "*", optional = true }
phf = { version = "0.11.1", features = ["macros", "unicase"] }
stretto = { version = "*", features = ["async"] }
tokio = { version = "*", features = ["full"] }
unicase = "*"

servente-generator = { version = "*", path = "../servente-generator", default-features = false }

[features]
convert-markdown = ["servente-generator/markdown"]
debugging = []
watch = ["dep:notify"]
