[package]
name = "servente_self_signed_cert"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
license-file = "../COPYING"

[dependencies]
rcgen = "*"

boring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[features]
tls-boring = ["dep:boring"]
tls-rustls = ["dep:rustls"]
