[package]
name = "servente-self-signed-cert"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rcgen = "*"

boring = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[features]
tls-boring = ["dep:boring"]
tls-rustls = ["dep:rustls"]
