[package]
name = "servente"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "*"
futures = "*"
hashbrown = "*"
itertools = "*"
lazy_static = "*"
rustls = { workspace = true, optional = true }
rustls-pemfile = "*"
strum_macros = "*"
tokio = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
tokio-uring = { version = "*", optional = true }
phf = { version = "*", features = ["macros", "unicase"] }
unicase = "*"

# Optional dependencies
scraper = { version = "*", optional = true }
ktls = { version = "*", optional = true }

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }

servente_generator = { version = "*", path = "../servente_generator", default-features = false }
servente_resources = { version = "*", path = "../servente_resources" }
servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }
servente_http1 = { version = "*", path = "../servente_http1" }
servente_http2 = { version = "*", path = "../servente_http2", optional = true }
servente_http3 = { version = "*", path = "../servente_http3", optional = true }
servente_self_signed_cert = { version = "*", path = "../servente-self-signed-cert", optional = true }

[dev-dependencies]
rstest = "*"

[features]
default = [
    "analysis",
    "convert-markdown",
    "http2",
    "rustls",
    "watch",
]

# Analyze files
analysis = [
    "dep:scraper"
]

# Convert Markdown to HTML (does not replace original file)
convert-markdown = [
    "servente_generator/markdown",
    "servente_http_handling/convert-markdown",
    "servente_http1/convert-markdown",
    "servente_resources/convert-markdown",
]

# Extensive debugging information for developers
debugging = [
    "servente_http/debugging",
    "servente_http_handling/debugging",
    "servente_http1/debugging",
    "servente_http2?/debugging",
    "servente_http3?/debugging",
    "servente_resources/debugging",
]

io_uring = [
    "dep:tokio-uring",
    "servente_http1/io_uring",
]

# WIP: Kernel TLS support (for `sendfile`)
ktls = [
    "dep:ktls",
    "servente_http1/ktls"
]

# HTTP/2 support
http2 = [
    "dep:servente_http2",
    "servente_http1/http2",
    "servente_http_handling/http2",
]

# HTTP/3 support
http3 = [
    "dep:servente_http3",
    "servente_http_handling/http3",
]

rustls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:servente_self_signed_cert",
    "servente_http_handling/rustls",
    "servente_http1/rustls",
    "servente_http2?/rustls",
    "servente_self_signed_cert?/tls-rustls",
]

server_push = [
    "servente_http2?/server_push"
]

tls-boring = [
    "dep:boring",
    "dep:tokio-boring",
    "dep:servente_self_signed_cert",
    "servente_http_handling/tls-boring",
    "servente_http1/tls-boring",
    "servente_http2?/tls-boring",
    "servente_self_signed_cert?/tls-boring",
]

# Watch for changes in the filesystem
watch = [
    "servente_resources/watch"
]
