[package]
name = "servente"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
default-run = "servente"

[dependencies]
anyhow = "*"
tokio = { workspace = true }
tokio-uring = { version = "*", optional = true }

# Optional dependencies
scraper = { version = "*", optional = true }
ktls = { version = "*", optional = true }

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }

servente-cgi = { version = "*", path = "../servente-cgi", optional = true, default-features = false }
servente-generator = { version = "*", path = "../servente-generator", default-features = false }
servente-resources = { version = "*", path = "../servente-resources" }
servente-http = { version = "*", path = "../servente-http", default-features = false }
servente-http-handling = { version = "*", path = "../servente-http-handling", default-features = false }
servente-http1 = { version = "*", path = "../servente-http1", default-features = false }
servente-http2 = { version = "*", path = "../servente-http2", optional = true, default-features = false }
servente-http3 = { version = "*", path = "../servente-http3", optional = true, default-features = false }

[dev-dependencies]
assert_cmd = "*"
rstest = "*"

[features]
default = [
    "analysis",
    "cgi",
    "convert-markdown",
    "http2",
    "rustls",
    "watch",
]

# Analyze files
analysis = [
    # "dep:scraper"
]

cgi = [
    "dep:servente-cgi",
]

# Convert Markdown to HTML (does not replace original file)
convert-markdown = [
    "servente-generator/markdown",
    "servente-http-handling/convert-markdown",
    "servente-http1/convert-markdown",
    "servente-resources/convert-markdown",
]

# Extensive debugging information for developers
debugging = [
    "servente-http/debugging",
    "servente-http-handling/debugging",
    "servente-http1/debugging",
    "servente-http2?/debugging",
    "servente-http3?/debugging",
    "servente-resources/debugging",
]

io_uring = [
    "dep:tokio-uring",
    "servente-http1/io_uring",
]

# WIP: Kernel TLS support (for `sendfile`)
ktls = [
    "dep:ktls",
    "servente-http1/ktls"
]

# HTTP/2 support
http2 = [
    "dep:servente-http2",
    "servente-http1/http2",
    "servente-http-handling/http2",
]

# HTTP/3 support
http3 = [
    "dep:servente-http3",
    "servente-http-handling/http3",
]

rustls = [
    # "dep:rustls",
    # "dep:tokio-rustls",
    "servente-http-handling/rustls",
    "servente-http1/rustls",
    "servente-http2?/rustls",
]

server_push = [
    "servente-http2?/server_push"
]

tls-boring = [
    # "dep:boring",
    # "dep:tokio-boring",
    "servente-http-handling/tls-boring",
    "servente-http1/tls-boring",
    "servente-http2?/tls-boring",
]

# Watch for changes in the filesystem
watch = [
    "servente-resources/watch"
]
