[package]
name = "servente_http2"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hashbrown = "*"
itertools = "*"
lazy_static = "*"
rustls = { version = "*", features = ["quic", "secret_extraction"] }
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"


servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }


[dev-dependencies]
rstest = "*"


[features]
debugging = []
server_push = []
