[package]
name = "servente_http2"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
hashbrown = "*"
itertools = "*"
lazy_static = "*"
rustls = { version = "*", features = ["quic", "secret_extraction"], optional = true }
tokio = { version = "*", features = ["full"] }
tokio-rustls = { version = "*", optional = true }

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }

servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }


[dev-dependencies]
rstest = "*"


[features]
debugging = []
rustls = [
    "dep:rustls",
    "dep:tokio-rustls",
]
server_push = []
tls-boring = [
    "dep:boring",
    "dep:tokio-boring",
    "servente_http_handling/tls-boring",
]
