[package]
name = "servente_http3"
edition.workspace = true
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hashbrown = "*"
itertools = "*"
lazy_static = "*"
quinn = { version = "*", features = ["rustls"] }
rustls = { workspace = true }
tokio = { version = "*", features = ["full"] }
tokio-rustls = "*"

servente_common = { version = "*", path = "../servente_common" }
servente_http = { version = "*", path = "../servente_http" }
servente_http_handling = { version = "*", path = "../servente_http_handling" }

[dev-dependencies]
rstest = "*"

[features]
debugging = []
