[package]
name = "servente_http_handling"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "*"
httpdate = "*"
itertools = "*"
rustls = { version = "*", features = ["quic", "secret_extraction"] }
tokio = { version = "*", features = ["full"] }
urlencoding = "*"

servente_http = { version = "*", path = "../servente_http" }
servente_resources = { version = "*", path = "../servente_resources" }

[features]
default = ["convert-markdown"]
debugging = []
convert-markdown = [
    "servente_resources/convert-markdown"
]
http2 = []
http3 = []
rustls = []
