[package]
name = "servente_http_handling"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "*"
httpdate = "*"
itertools = "*"
rustls = { version = "*", features = ["quic", "secret_extraction"], optional = true }
tokio = { version = "*", features = ["full"] }
urlencoding = "*"

boring = { workspace = true, optional = true }
tokio-boring = { workspace = true, optional = true }

servente_http = { version = "*", path = "../servente_http" }
servente_resources = { version = "*", path = "../servente_resources" }
servente_self_signed_cert = { version = "*", path = "../servente-self-signed-cert", optional = true }

[features]
default = ["convert-markdown"]
debugging = []
convert-markdown = [
    "servente_resources/convert-markdown"
]
http2 = []
http3 = []
rustls = [
    "dep:rustls",
    "dep:servente_self_signed_cert",
    "servente_self_signed_cert?/tls-rustls",
]

tls-boring = [
    "dep:boring",
    "dep:tokio-boring",
    "dep:servente_self_signed_cert",
    "servente_self_signed_cert?/tls-boring",
]
