[package]
name = "servente_resources"
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
brotli = { version = "*", default-features = false, features = ["std"] }
flate2 = "*"
httpdate = "*"
lazy_static = "*"
phf = { version = "0.11.1", features = ["macros", "unicase"] }
stretto = { version = "*", features = ["async"] }
tokio = { version = "*", features = ["full"] }
unicase = "*"

servente_generator = { version = "*", path = "../servente_generator", default-features = false }

[features]
convert-markdown = ["servente_generator/markdown"]
